<?xml version="1.0"?>
<package format="2">
  <name>choreonoid_ros_tank</name>
  <version>0.0.0</version>
  <description>The choreonoid_ros_tank package</description>
  <maintainer email="eicha178@gmail.com">eicha178</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>choreonoid</depend>
  <depend>choreonoid_ros_plugin</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>message_generation</depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
